<resources>
    <string name="app_name">Group 5 Ghost Hunter</string>

    <string name="action_settings">Settings</string>
    <string name="title_string">Ghost Hunters</string>
    <string name="play_button">Play (Easy)</string>
    <string name="play_hard_button">Play (Hard)</string>
    <string name="title_activity_main_activity2">Ghost Hunters</string>
    <string name="title_activity_main_activity">Ghost Hunters</string>
    <string name="score">Score: </string>
    <string name="how_to_play">How To Play</string>
    <string name="instructions">The Ghost Hunter App is a simple game. Tilt your screen
        in order to move your character (at the bottom of the screen). Tap the screen to fire
        a bullet. Ghosts will begin to come from the top of the screen. Your objective is to shoot
        the ghosts before they are able to get to the bottom of the screen. If they make if to the
        bottom, you will lose one of your three lives. You lose once your three lives run out. You
        also lose if a ghost touches your character. Your score is based on the number of ghosts
        you shoot.
    </string>
    <string name="main_menu">Main Menu</string>
    <string name="lives">Lives Remaining</string>


</resources>
