<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_menu"
    android:background="@mipmap/spooky_image">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_string"
        android:id="@+id/textView8"
        android:textColor="#c435b93e"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_marginTop="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/play_button"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:theme="@style/AppTheme"
       />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_hard_button"
        android:id="@+id/high_score_button"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:theme="@style/AppTheme"
        android:onClick="send_message2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/high_score_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:id="@+id/how_to_play_button"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/play_button"
        android:layout_alignStart="@+id/play_button" />

</RelativeLayout>
